VACMS-15785: fix for spacing around error

--- a/docroot/design-system/components/input/input.scss
+++ b/docroot/design-system/components/input/input.scss
@@ -24,4 +24,5 @@
 
 .form-item--error-message {
   color: var(--va-red-dark);
+  margin: 5px 0;
 }
